--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.104-2) unstable; urgency=medium
+  [ Kris Jacque ]
+  * Move daos_metrics to server package
+
+ -- Kris Jacque <kristin.jacque@intel.com>  Tue, 03 Aug 2021 17:45:35 -0600
+
 daos (1.3.104-1) unstable; urgency=medium
   [ Jeff Olivier ]
   * Version bump to 1.3.104 for 2.0 test build 4
